--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^4.13.4",
     "morgan": "~1.7.0",
     "nodemon": "^1.12.1",
+    "npm": "^5.8.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
